# cycling-trip-planner-agent

./: .env.example  .gitignore  README.md  chat_ui.py  main.py  pyproject.toml
src/: models.py
src/agent/: guardrails.py  orchestrator.py  planner_policy.py  session.py  system_prompt.py  tool_definitions.py
src/api/: app.py  dependencies.py  routes.py
src/tools/: __init__.py  mock_accommodation.py  mock_budget.py  mock_elevation.py  mock_poi.py  mock_route.py  mock_visa.py  mock_weather.py  protocol.py
tests/: conftest.py  test_api.py  test_guardrails.py  test_models.py  test_orchestrator.py  test_planner_policy.py  test_tools.py
